<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/bottom_navigation_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bluetooth"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textColor="@color/accent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="@dimen/toolbar_bluetooth_icon_size"
                        android:layout_height="@dimen/toolbar_bluetooth_icon_size"
                        app:srcCompat="@drawable/ic_bluetooth_disabled_white_24dp"
                        android:background="@drawable/circular_image_view_grey"
                        android:padding="@dimen/toolbar_bluetooth_padding"
                        android:layout_marginEnd="@dimen/toolbar_last_icon_margin_end"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:elevation="1dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_bt_grey"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="@dimen/toolbar_bluetooth_icon_size"
                        android:layout_height="@dimen/toolbar_bluetooth_icon_size"
                        app:srcCompat="@drawable/ic_bluetooth_white_24dp"
                        android:background="@drawable/circular_image_view"
                        android:padding="@dimen/toolbar_bluetooth_padding"
                        android:layout_marginEnd="@dimen/toolbar_last_icon_margin_end"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:elevation="1dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_bt_blue"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="@dimen/toolbar_bluetooth_icon_size"
                        android:layout_height="@dimen/toolbar_bluetooth_icon_size"
                        app:srcCompat="@drawable/ic_bluetooth_connected_white_24dp"
                        android:background="@drawable/circular_image_view_green"
                        android:padding="@dimen/toolbar_bluetooth_padding"
                        android:layout_marginEnd="@dimen/toolbar_last_icon_margin_end"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:elevation="1dp"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_bt_green"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="@dimen/toolbar_bluetooth_icon_size"
                        android:layout_height="@dimen/toolbar_bluetooth_icon_size"
                        app:srcCompat="@drawable/ic_bluetooth_white_24dp"
                        android:background="@drawable/circular_image_view_red"
                        android:padding="@dimen/toolbar_bluetooth_padding"
                        android:layout_marginEnd="@dimen/toolbar_last_icon_margin_end"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:elevation="1dp"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_bt_red"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bnav_acquisition"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textColor="@color/accent"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="@dimen/toolbar_bluetooth_icon_size"
                        android:layout_height="@dimen/toolbar_bluetooth_icon_size"
                        android:id="@+id/play_pause"
                        app:srcCompat="@drawable/ic_pause_white_24dp"
                        android:background="@drawable/revertripple"
                        android:padding="@dimen/toolbar_bluetooth_padding"
                        android:layout_marginEnd="@dimen/toolbar_last_icon_margin_end"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:tag="0"
                        android:elevation="1dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_acq_pp"
                        android:layout_gravity="center_vertical" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="@dimen/toolbar_bluetooth_icon_size"
                        android:layout_height="@dimen/toolbar_bluetooth_icon_size"
                        app:srcCompat="@drawable/ic_center_focus_weak_white_24dp"
                        android:background="@drawable/revertripple"
                        android:padding="@dimen/toolbar_bluetooth_padding"
                        android:layout_marginEnd="@dimen/toolbar_last_icon_margin_end"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:elevation="1dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_acq_af"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="@dimen/toolbar_bluetooth_icon_size"
                        android:layout_height="@dimen/toolbar_bluetooth_icon_size"
                        app:srcCompat="@drawable/ic_update_white_24dp"
                        android:background="@drawable/revertripple"
                        android:padding="@dimen/toolbar_bluetooth_padding"
                        android:layout_marginEnd="@dimen/toolbar_last_icon_margin_end"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:elevation="1dp"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_acq_calibrage"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="@dimen/toolbar_bluetooth_icon_size"
                        android:layout_height="@dimen/toolbar_bluetooth_icon_size"
                        app:srcCompat="@drawable/ic_save_white_24dp"
                        android:background="@drawable/ripple"
                        android:tint="@color/colorAccent"
                        android:padding="@dimen/toolbar_bluetooth_padding"
                        android:layout_marginEnd="@dimen/toolbar_last_icon_margin_end"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:elevation="1dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_acq_save"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingStart="10dp">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:layout_width="@dimen/toolbar_bluetooth_icon_size"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/chartBlue"
                        android:checked="true"
                        android:layout_marginEnd="@dimen/toolbar_last_icon_margin_end"
                        android:layout_marginBottom="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_acq_curves"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bnav_history"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textColor="@color/accent"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="@dimen/toolbar_bluetooth_icon_size"
                        android:layout_height="@dimen/toolbar_bluetooth_icon_size"
                        app:srcCompat="@drawable/ic_add_white_24dp"
                        android:background="@drawable/revertripple"
                        android:padding="@dimen/toolbar_bluetooth_padding"
                        android:layout_marginEnd="@dimen/toolbar_last_icon_margin_end"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:elevation="3dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_hist_add"
                        android:layout_gravity="center_vertical"
                        android:ellipsize="end"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:paddingStart="10dp">

                    <ImageView
                        android:layout_width="@dimen/toolbar_bluetooth_icon_size"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_delete_white_24dp"
                        android:tint="@color/colorAccent"
                        android:padding="@dimen/toolbar_bluetooth_padding"
                        android:layout_marginEnd="@dimen/toolbar_last_icon_margin_end"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:elevation="3dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/help_hist_remove"
                        android:layout_gravity="fill"
                        android:ellipsize="end" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</ScrollView>