<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityContainer"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".activities.MotoFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/form_back"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_clear_white_36dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/form_moto_photo"
                android:layout_gravity="center"
                android:tint="@color/white"
                android:padding="10dp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/no_photo_selected"
                android:gravity="center"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/form_moto_addLibrary"
                    android:tint="@color/colorAccent"
                    android:background="@drawable/ripple"
                    android:src="@drawable/ic_photo_library_white_24dp"
                    android:padding="10dp"
                    android:layout_margin="10dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/form_moto_launchCamera"
                    android:tint="@color/colorAccent"
                    android:background="@drawable/ripple"
                    android:src="@drawable/ic_photo_camera_white_24dp"
                    android:padding="10dp"
                    android:layout_margin="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </RelativeLayout>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:id="@+id/form_moto_name"
                    android:hint="@string/moto_name"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="40dp"
                    android:inputType="text"
                    android:theme="@style/MyEditTextTheme"/>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </RelativeLayout>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/create"
                    android:id="@+id/form_moto_create"
                    android:layout_marginBottom="30dp"
                    android:theme ="@style/MyButton"/>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
